# rentware-events-backend

./: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_photo_url_text.py
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  cart.py  catalog.py  config.py  orders.py  stock.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: cart.py  catalog.py  config.py  order.py  shared.py  stock.py  user.py
app/schemas/: auth.py  cart.py  catalog.py  config.py  order.py  stock.py  user.py
app/seed/: seed_data.py
app/services/: auth.py  cart.py  catalog.py  config.py  notifications.py  order.py
tests/: conftest.py  test_checkout.py  test_totals.py  test_transitions.py
